--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,43 @@
 asgiref==3.5.0
+asttokens==2.2.1
+backcall==0.2.0
+catalogue==2.0.8
+certifi==2022.6.15
+charset-normalizer==2.1.1
+decorator==5.1.1
 Django==4.0.4
-django-jazzmin==2.5.0
 django-autocomplete-light==3.9.4
-sqlparse==0.4.2
+django-ckeditor==6.5.1
+django-jazzmin==2.5.0
+django-js-asset==2.0.0
+executing==1.2.0
+gunicorn==20.1.0
+idna==3.3
+ipython==8.8.0
+jedi==0.18.2
 lunr==0.6.2
-srsly==2.4.3 
-tqdm==4.64.0
+markdown-it-py==2.1.0
+matplotlib-inline==0.1.6
+mdurl==0.1.2
 netlify-py==0.1.0
-
+numpy==1.23.5
+pandas==1.5.2
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.36
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.14.0
+python-dateutil==2.8.2
+pytz==2022.6
+requests==2.28.1
+rich==13.3.1
+six==1.16.0
+sqlparse==0.4.2
+srsly==2.4.3
+stack-data==0.6.2
+tqdm==4.64.0
+traitlets==5.8.0
+urllib3==1.26.12
+wcwidth==0.2.5
